# blogango

./: .editorconfig  .env.example  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  example.env  pyproject.toml
.github/workflows/: Django.yml  django.yml
apps/accounts/: forms.py
apps/accounts/migrations/: 0001_initial.py
apps/core/: views.py
apps/core/tests/: test_urls.py
blogango/apps/articles/: mixins.py  models.py  urls.py  views.py
blogango/config/: settings.py  urls.py
blogango/templates/: base.html
blogango/templates/articles/: article_detail.html  article_list.html
blogango/templates/includes/: about.html  article.html  breadcrumb.html  pagination.html  tag_list.html
blogango/tests/: test_the_connection_to_the_database.py
blogango/tests/factories/: articles.py
blogango/tests/tests_articles/: test_app.py  test_models.py  test_urls.py  test_views.py
config/: settings.py  urls.py
docker/server/: Dockerfile
docker/web/: Dockerfile
nginx/: nginx.conf
project/apps/articles/: admin.py  mixins.py  models.py  urls.py  views.py
project/templates/: base.html
project/templates/articles/: article_detail.html  article_list.html
project/templates/includes/: about.html  breadcrumb.html  latest_article.html  pagination.html  tags.html
project/tests/factory/: articles.py
project/tests/tests_articles/: test_apps.py  test_models.py  test_urls.py  test_views.py
sussurros/: apps.py
sussurros/articles/: admin.py  models.py  urls.py  views.py
sussurros/articles/migrations/: 0001_initial.py
sussurros/articles/tests/: factory.py  test_models.py  test_urls.py  test_views.py
templates/pages/: index.html
templates/templates/: base.html
templates/templates/article/: article_base.html  article_detail.html  article_list.html
templates/templates/core/: base_core.html  index.html
web/config/: settings.py
web/templates/: base.html
(+8 files in other folders)
