[tool.poetry]
name = "blogango"
version = "0.1.0"
description = "Blogango, a blog buit with Django"
authors = ["Danilo Marto de Carvalho <dmcarvalho@tutamail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
python-decouple = "^3.7"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
django-model-utils = "^4.3.1"
django-taggit = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.2"
pytest = "^7.2.1"
pytest-django = "^4.5.2"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
